# viper-sdk-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: 01_stream_account_state.py
src/viper/: __init__.py  exceptions.py  rest.py  rest_types.py  ws.py
src/viper/examples/: __init__.py  _algo_common.py  _algo_rest_common.py  account_snapshot.py  algo_actions.py  algo_lifecycle.py  basket.py  detect_and_fire_glidemaker.py  getting_started.py  instrument_detail.py  list_executions.py  list_instruments.py  monitor_actions.py  monitor_lifecycle.py  nuke.py  place_order.py  preview_algo.py  smart_exit.py  start_flowband.py  start_flowscale.py  start_ghostsweep.py  start_glidemaker.py  start_pacemaker.py  stream_account_state.py  stream_execution.py  stream_executions.py  stream_monitors.py  stream_orders_fills.py  ws_algo_control.py  ws_archive.py  ws_basket.py  ws_bulk_control.py  ws_order_control.py  ws_order_management.py  ws_read_snapshot.py  ws_sweep.py
tests/: test_handshake_status.py  test_resync_map.py
