[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "viper-execution"
version = "0.3.0"
description = "Institutional-grade Python SDK for the Viper Execution trading API on Hyperliquid."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Viper Execution" }]
keywords = ["viper", "hyperliquid", "trading", "algotrading", "websocket"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = [
    "websockets>=13.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
viper-examples = "viper.examples:cli"

[project.urls]
Homepage = "https://viperexecution.com"
Documentation = "https://docs.viperexecution.com"
Repository = "https://github.com/viperexecution/viper-sdk-python"
Issues = "https://github.com/viperexecution/viper-sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/viper"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
